# fastapi_agent_starter

./: README.md  docker-compose.yml
agent/: Dockerfile  pyproject.toml  server.py
agent/api/v1/dependencies/: agent.py
agent/api/v1/dependencies/prompts/: __init__.py  system_message.py
agent/api/v1/dependencies/tools/: __init__.py  tools.py
agent/api/v1/dependencies/utils/: __init__.py  utils.py
agent/api/v1/endpoints/: invoke.py
